<resources>
    <string name="app_name">Passenger</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="debug_map_key">AIzaSyBEiOEM3sF-OIsHhgOwLQgsCpBbwr49BwM</string>
    <string name="release_map_key">AIzaSyD5tsXUAafLA0xz4bI3hfHSWvroZBTSZs8</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_maps">Map</string>
    <string name="gcm_defaultSenderId">988345205397</string>
    <string name="create_an_account">Create An Account</string>
    <string name="error">error </string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="telephone">Telephone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_date_of_birth">Select Date Of Birth</string>
    <string name="register">Register</string>
    <string name="to_login">To Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="e_s">E . S</string>
    <string name="the_safe_and_better_option">The safe and better option</string>
    <string name="enter_details_to_apply">Enter Details To Apply</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="apply">Apply</string>
    <string name="eagle_safari">Eagle Safari</string>
    <string name="www_eaglesafari_com">www.EagleSafari.com</string>
    <string name="review_the_service">Review the service</string>
    <string name="enter_text_here">Enter text here..</string>
    <string name="number">  Number</string>
    <string name="price">  Price</string>
    <string name="sub_total">  Sub Total</string>

</resources>
