<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="#000033"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >
        <TextView
            android:id="@+id/txt_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error"
            android:textColor="#FFF41111"
            android:visibility="gone" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/enter_details_to_apply"
            android:textColor="#FFFFFFFF" />
        <EditText
            android:id="@+id/txt_first_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/email_bg"
            android:hint="@string/first_name"
            android:layout_margin="3dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#000000" />
        <EditText
            android:id="@+id/txt_last_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/email_bg"
            android:hint="@string/last_name"
            android:layout_margin="3dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#000000" />
        <EditText
            android:id="@+id/txt_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/email_bg"
            android:hint="@string/email"
            android:layout_margin="3dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#000000" />
        <EditText
            android:id="@+id/txt_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/email_bg"
            android:hint="@string/phone"
            android:layout_margin="3dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#000000" />
        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/email_bg"
            android:layout_margin="3dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#000000" />
        <Button
            android:id="@+id/btn_apply"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_login_bg"
            android:padding="5dp"
            android:text="@string/apply"
            android:textColor="#FFFFFFF0"
            android:textSize="15sp"
            android:typeface="sans" />

    </LinearLayout>
</ScrollView>