<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000033"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/eaglelogo" />
        <TextView
            android:id="@+id/txt_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error"
            android:textColor="#FFF41111"
            android:visibility="gone" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/already_have_an_account"
            android:textColor="#FFFFFFFF"
            android:textStyle="italic" />
        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/email_bg"
            android:hint="@string/email"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#000000" />
        <EditText
            android:id="@+id/txtpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/email_bg"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#000000" />
        <Button
            android:id="@+id/btnlogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_login_bg"
            android:padding="5dp"
            android:text="@string/log_in"
            android:textColor="#FFFFFFF0"
            android:textSize="18sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_register_bg"
            android:padding="5dp"
            android:text="@string/sign_up"
            android:textColor="#FFFFFFF0"
            android:textSize="18sp"
            android:typeface="sans" />
    </LinearLayout>
</ScrollView>