<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="-1dip"
    android:layout_toRightOf="@+id/thumbnail"
    android:background="@drawable/back"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/thumbnail"
            android:text="   Item"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="13dip"
            android:typeface="sans" />
    </LinearLayout>
    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:background="#FF000000" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.3"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/thumbnail"
            android:text="@string/number"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="13sp"
            android:typeface="sans" />
    </LinearLayout>
    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:background="#FF000000" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.3"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/thumbnail"
            android:text="@string/price"
            android:textColor="#000000"
            android:textSize="13sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>
    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:background="#FF000000" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_sub_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/thumbnail"
            android:text="@string/sub_total"
            android:textColor="#000000"
            android:textSize="13sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>
    <!-- Artist Name -->
</LinearLayout>
